apps/backend/import_profile.txt
import time: self [us] | cumulative | imported package
import time:       889 |        889 | winreg
import time:      2066 |       2066 |   _io
import time:       436 |        436 |   marshal
import time:      1661 |       1661 |   nt
import time:      2845 |       7006 | _frozen_importlib_external
import time:     26976 |      26976 |   time
import time:      6646 |      33621 | zipimport
import time:       371 |        371 |     _codecs
import time:     13036 |      13407 |   codecs
import time:     26056 |      26056 |   encodings.aliases
import time:     47274 |      86735 | encodings
import time:     21890 |      21890 | encodings.utf_8
import time:      1045 |       1045 | _signal
import time:       587 |        587 |     _abc
import time:     13238 |      13824 |   abc
import time:      3267 |      17091 | io
import time:      1876 |       1876 |       _stat
import time:      1023 |       2899 |     stat
import time:     12978 |      12978 |     _collections_abc
import time:       418 |        418 |       genericpath
import time:       682 |        682 |       _winapi
import time:      1035 |       2134 |     ntpath
import time:      5372 |      23382 |   os
import time:      4301 |       4301 |   _sitebuiltins
import time:     14764 |      14764 |   encodings.utf_8_sig
import time:      5325 |       5325 |     __future__
import time:      6079 |       6079 |         warnings
import time:      5181 |      11260 |       importlib
import time:       982 |      12241 |     importlib.machinery
import time:      4692 |       4692 |       importlib._abc
import time:      4828 |       4828 |       types
import time:       864 |      10383 |     importlib.util
import time:       880 |        880 |     itertools
import time:      1154 |       1154 |           posix
import time:       498 |       1651 |         posixpath
import time:       941 |        941 |               _operator
import time:      5603 |       6544 |             operator
import time:      3980 |       3980 |                 keyword
import time:      3419 |       3419 |                 reprlib
import time:       716 |        716 |                 _collections
import time:      9849 |      17963 |               collections
import time:       483 |        483 |               _functools
import time:      7565 |      26011 |             functools
import time:     11397 |      43950 |           enum
import time:       535 |        535 |             _sre
import time:      5498 |       5498 |               re._constants
import time:     11580 |      17078 |             re._parser
import time:      8430 |       8430 |             re._casefix
import time:      5192 |      31233 |           re._compiler
import time:      6559 |       6559 |           copyreg
import time:      6179 |      87920 |         re
import time:      4565 |      94135 |       fnmatch
import time:       507 |        507 |       errno
import time:      7479 |       7479 |         urllib
import time:      1196 |       1196 |         math
import time:     15165 |      15165 |         ipaddress
import time:     20527 |      44366 |       urllib.parse
import time:      9161 |     148167 |     pathlib
import time:     23786 |     200780 |   __editable___cli_1_0_0_finder
import time:      8559 |       8559 |   __editable___project_name_0_1_0_finder
import time:      5105 |       5105 |   __editable___unified_ai_cli_1_1_0_finder
import time:      8195 |       8195 |   _distutils_hack
import time:      6602 |       6602 |     pywin32_system32
import time:     11986 |      18588 |   pywin32_bootstrap
import time:      5272 |       5272 |   sitecustomize
import time:      2214 |       2214 |   usercustomize
import time:     74526 |     365681 | site
  File "<string>", line 1
    "from
    ^
SyntaxError: unterminated string literal (detected at line 1)
